--- a/config/shtm2bss_config_eval-single_nest_SHTMTotal_off-chip.yaml
+++ b/config/shtm2bss_config_eval-single_nest_SHTMTotal_off-chip.yaml
@@ -25,6 +25,7 @@ performance:
   running_avgs: [ 0.25, 0.5, 0.75, 1.0 ]
 network:
   num_symbols: 4
+  replay_mode: "parallel"
   num_neurons: 15
   pattern_size: 3
 backend:
