Added non-structured stdp option for NEST-SHTM

--- a/config/shtm2bss_config_eval-single_nest_SHTMTotal_off-chip.yaml
+++ b/config/shtm2bss_config_eval-single_nest_SHTMTotal_off-chip.yaml
@@ -40,20 +40,21 @@ plasticity:
   type: 'original'
 #  type: 'bss2'
 #  type: 'bss2_int'
+  enable_structured_stdp: False
   learning_factor: 1    # 2 for int
   learning_rate_decay: null
   weight_learning: False
   weight_learning_scale: 0.0026
-  permanence_init_min: 0
-  permanence_init_max: 8
-  permanence_max: 20.
+  permanence_init_min: 0.
+  permanence_init_max: 2.
+  permanence_max: 12.98
   permanence_threshold: 10.
   correlation_threshold: 0.0005 # 0.06 for tau_+ = 20
   w_mature: 0.1298 # 0.1298
   y: 1
-  lambda_plus: 0.08   # bss=0.15 / bss-int=0.25 for int
-  lambda_minus: 0.0015    # bss=0.0045 / bss-int=0.0007 for int
-  lambda_h: 0.014        # bss=0.03 / bss-int=0.03 for int
+  lambda_plus: 0.35   # bss=0.15 / bss-int=0.25 for int
+  lambda_minus: 0.006    # bss=0.0045 / bss-int=0.0007 for int
+  lambda_h: 0.045        # bss=0.03 / bss-int=0.03 for int
   homeostasis_depression_rate: 1.0
   target_rate_h: 1.0   # bss=0.16 / bss-int=0.14
   tau_plus: 20      # bss=18 / bss-int=20
