Added legend for dap duplicates, fixed parameter for table conversion

--- a/config/shtm2bss_config_parameter-conversion.yaml
+++ b/config/shtm2bss_config_parameter-conversion.yaml
@@ -56,7 +56,7 @@ parameters:
     description: "inter-stimulus interval"
     original_value:
   encoding.dt_seq:
-    name: "$\\Delta T_{sew}$"
+    name: "$\\Delta T_{seq}$"
     description: "inter-sequence interval"
     original_value:
   encoding.t_exc_start:
