--- a/config/shtm2bss_config_eval-single_nest_SHTMTotal_off-chip.yaml
+++ b/config/shtm2bss_config_eval-single_nest_SHTMTotal_off-chip.yaml
@@ -2,6 +2,7 @@ experiment:
   id: 'org_s2'
   opt_id: ''
   sequences: [['A', 'C', 'B'], ['D', 'C', 'B']]
+  map_name: 'ambiguous_01'
   sequences: [[A, B, C, D, E, F], [A, B, C, D, E, G], [A, B, C, D, H, I]]
 #  sequences: [[A, D, B, E], [F, D, B, C]]
 #  sequences: [['E', 'N', 'D', 'I', 'J'], ['L', 'N', 'D', 'I', 'K'], ['G', 'J', 'M', 'C', 'N'], ['F', 'J', 'M', 'C', 'I'], ['B', 'C', 'K', 'H', 'I'], ['A', 'C', 'K', 'H', 'F']]
@@ -53,8 +54,7 @@ plasticity:
   permanence_max: 20.
   permanence_threshold: 10.
   correlation_threshold: 0.0005 # 0.06 for tau_+ = 20
-  w_mature: 0.1298 # 0.1298
-  num_coactive_neurons: 3
+  num_coactive_neurons: 1
   w_mature: 1.1 * parameters.neurons.dendrite.theta_dAP * 0.001 / parameters.plasticity.num_coactive_neurons
   y: 1
   lambda_plus: 0.08   # bss=0.15 / bss-int=0.25 for int
